--- a/viewer.html
+++ b/viewer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tischtennis Turnier - Aktueller Stand</title>
+    <title>v1.0 Tischtennis Turnier - Aktueller Stand</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -125,7 +125,7 @@
 
                         // Überprüfen, ob das Spiel abgeschlossen ist (keine leeren Ergebnisse)
                         if (result1 && result2 && result3) {
-                            const { team1Points, team2Points, team1Scored, team2Scored } = calculatePoints(result1, result2, result3);
+                            const { team1Points, team2Points } = calculatePoints(result1, result2, result3);
 
                             // Punkte für jedes Team speichern
                             if (!teamScores[team1]) {
@@ -135,20 +135,13 @@
                                 teamScores[team2] = { scored: 0, received: 0, diff: 0 };
                             }
 
-                            teamScores[team1].scored += team1Scored;
-                            teamScores[team1].received += team2Scored;
+                            teamScores[team1].scored += team1Points;
+                            teamScores[team1].received += team2Points;
                             teamScores[team1].diff = teamScores[team1].scored - teamScores[team1].received;
 
-                            teamScores[team2].scored += team2Scored;
-                            teamScores[team2].received += team1Scored;
+                            teamScores[team2].scored += team2Points;
+                            teamScores[team2].received += team1Points;
                             teamScores[team2].diff = teamScores[team2].scored - teamScores[team2].received;
-
-                            // Punkte hinzufügen, wenn das Spiel gewonnen wurde
-                            if (team1Points === 2) {
-                                teamScores[team1].scored += 2;  // Team 1 gewinnt 2 Punkte
-                            } else if (team2Points === 2) {
-                                teamScores[team2].scored += 2;  // Team 2 gewinnt 2 Punkte
-                            }
                         }
                     });
 
@@ -171,37 +164,6 @@
                     console.log('Keine Spielplan-Daten für Rangliste gefunden.');
                 }
             });
-        }
-
-        // Funktion zur Berechnung der erzielten und erhaltenen Punkte
-        function calculatePoints(result1, result2, result3) {
-            let team1Scored = 0;
-            let team2Scored = 0;
-            let team1Points = 0;
-            let team2Points = 0;
-
-            // Berechnung der Punkte aus den Satz-Ergebnissen
-            [result1, result2, result3].forEach(result => {
-                if (result) {
-                    const [score1, score2] = result.split('-').map(Number);
-                    team1Scored += score1;
-                    team2Scored += score2;
-
-                    // Bestimmen, wer den Satz gewonnen hat
-                    if (score1 > score2) {
-                        team1Points++;
-                    } else if (score2 > score1) {
-                        team2Points++;
-                    }
-                }
-            });
-
-            return {
-                team1Points,
-                team2Points,
-                team1Scored,
-                team2Scored
-            };
         }
 
         // Formatierung der Spiele-Ergebnisse für die "Spiele"-Spalte
