--- a/viewer.html
+++ b/viewer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>v1.0 Tischtennis Turnier - Aktueller Stand</title>
+    <title>Tischtennis Turnier - Aktueller Stand</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -186,11 +186,8 @@
                 if (result) {
                     const [score1, score2] = result.split('-').map(Number);
 
-                    if (score1 > score2) {
-                        team1Points++;
-                    } else if (score2 > score1) {
-                        team2Points++;
-                    }
+                    team1Points += score1;
+                    team2Points += score2;
                 }
             });
 
